# EGOSHIELD

./: .gitignore  EgoshieldDesigndocfinal.md  Egoshielddesigndoc.md  Egoshielddesigndocumentfull.md  README.md  dashboard.html  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py
docs/: API.md  adr-001-local-first-architecture.md  adr-002-sqlite-wal.md  adr-003-url-hashing.md  adr-004-structured-logging.md  adr-006-dynamic-plugins.md  architecture.md  deployment.md  developer-guide.md  extension.md  index.md  quickstart.md  security.md
egoshield/daemon/: __init__.py  email_reader.py  keyring_service.py  main.py  requirements.txt
egoshield/daemon/api/: __init__.py  routes.py  schemas.py
egoshield/daemon/arbiter/: __init__.py  ollama.py
egoshield/daemon/db/: __init__.py  connection.py  models.py  schema.sql
egoshield/daemon/detectors/: __init__.py  base.py  dark_pattern.py  emotional_manipulation.py  gaslighting.py  plugin_manager.py  social_engineering.py  urgency_inflation.py
egoshield/daemon/scoring/: __init__.py  engine.py
egoshield/daemon/services/: __init__.py  analysis.py  rules.py  settings.py
egoshield/daemon/utils/: __init__.py  content.py  logging.py  project_paths.py  security.py
extension/: manifest.json  popup.html
extension/css/: overlay.css  popup.css
extension/js/: background.js  content.js  popup.js
migrations/: 001_init.sql
plugins/: detector_example.py
scripts/: install.sh  start-daemon.sh
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_plugins.py
